--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --host localhost --port 8081",
+    "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "firebase": "^10.13.1",
+    "firebase": "^10.13.2",
     "sweetalert2": "^11.14.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
